@@ -1,6 +1,7 @@
 Version 2.02.40 - 
 ================================
-  Add "flags" metadata field (akin to "status") for backward-compatible flags.
+  Cease recognising snapshot-in-use percentages returned by early devt kernels.
+  Add backward-compatible flags field to on-disk format_text metadata.
   Fix dmeventd monitoring libraries to link against liblvm2cmd again. (2.02.39)
 
 Version 2.02.39 - 27th June 2008
